<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/imageView2"
            android:layout_marginTop="40dp"
            android:foregroundGravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:srcCompat="@drawable/logotran"
            app:srcCompat="@drawable/logotran"
            android:contentDescription="@string/qr_logo"
    />

    <TextView
            android:text="@string/naziv_projekta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="167dp"
            android:gravity="center"
            android:id="@+id/textView2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/imageView2"
            android:layout_marginTop="32dp"
    />

    <TextView
            android:text="@string/broj_verzije"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="167dp"
            android:id="@+id/textView3"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/textView2"
    />

    <TextView
            android:text="@string/kontakt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="180dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#039BE5"
            android:id="@+id/textView6"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
    />

    <TextView
            android:text="@string/autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="167dp"
            android:id="@+id/textView4"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
    />

    <TextView
            android:text="@string/copyright"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            tools:layout_editor_absoluteX="167dp"
            android:id="@+id/textView5"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"/>

</androidx.constraintlayout.widget.ConstraintLayout>