<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
    >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datum2"
                android:id="@+id/attendance_date"
                android:textColor="#000"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dan"
                android:textColor="#000"
                android:id="@+id/attendance_day"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/attendance_time"
                android:text="@string/sat"
                android:textColor="#000"
        />

    </LinearLayout>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_centerVertical="true"
    />

</RelativeLayout>