<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/my_acc_root_view"
        tools:context=".MyAccountActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/customized_app_bar_layout"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true"
            tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:id="@+id/collasping_toolbar"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="@color/colorPrimary"
                app:expandedTitleTextAppearance="@android:color/transparent"
        >

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/side_nav_bar"
                        android:contentDescription="TODO"
                />

                <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="178dp"
                        android:layout_height="178dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/dprofile"
                        android:scaleType="centerCrop"
                        android:id="@+id/profile_img_myacc"
                />

                <TextView
                        android:layout_width="match_parent" android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:text="@string/mkpt_default"
                        android:layout_alignParentBottom="true"
                        android:textStyle="normal"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:background="#66000000"
                        android:id="@+id/tv_mkpt_myacc"
                        android:textColor="#FFFFFF"
                />

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:id="@+id/customized_toolbar"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            >

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:id="@+id/nested_scroll_view"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

        >
            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true"
            >
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                >
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/broj_telefona"
                            android:textSize="20sp"
                            android:id="@+id/tv_phone_myacc"
                            android:gravity="center"
                            android:layout_alignParentStart="true"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                    />
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_phone"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                    />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true"
            >
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                >
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/email"
                            android:id="@+id/tv_email_myacc"
                            android:textSize="18sp"
                            android:gravity="center"
                            android:layout_alignParentStart="true"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                    />
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_email"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                    />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                >
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Izborni blok"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:paddingBottom="5dp"
                    />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/HPCMajor"
                            android:id="@+id/tv_major_myacc"
                            android:textSize="18sp"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                    />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                >
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Kolegiji"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:paddingBottom="5dp"
                    />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="DR1-02, DAR1-01, DRac1-06-18"
                            android:textSize="18sp"
                            android:id="@+id/tv_subject_myacc"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                    />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                >
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/adresa_naslov"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:paddingBottom="5dp"
                    />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/adresa"
                            android:textSize="18sp"
                            android:id="@+id/tv_address_myacc"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                    />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>